// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createNewOfferEffect() Creates a new offer #nsn5S8 1`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "args": Array [
      "repo1",
    ],
    "selector": [Function],
  },
  "type": "SELECT",
}
`;

exports[`createNewOfferEffect() Creates a new offer #nsn5S8 2`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "args": Array [
      "/repos/repo1/an-example-offer/index.md",
      "---
uuid: offer1-uuid
proximity: 0
shareToProximity: 1
title: An example offer
tags: []
createdAt: 1607000000
updatedAt: 1607000000
---
An offer example
",
      Object {
        "encoding": "utf8",
      },
    ],
    "context": null,
    "fn": [Function],
  },
  "type": "CALL",
}
`;

exports[`createNewOfferEffect() Creates a new offer #nsn5S8 3`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "args": Array [
      Object {
        "payload": Object {
          "message": "Creating a new offer",
          "repoId": "repo1",
        },
        "type": "SHARE/repo/commitAll",
      },
    ],
    "context": null,
    "fn": [Function],
  },
  "type": "CALL",
}
`;

exports[`createNewOfferEffect() Creates a new offer #nsn5S8 4`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "action": Object {
      "payload": Object {
        "bodyMarkdown": "An offer example",
        "createdAt": 1607000000,
        "id": "offer1-uuid",
        "mine": true,
        "proximity": 0,
        "repoId": "repo1",
        "shareToProximity": 1,
        "tags": Array [],
        "title": "An example offer",
        "updatedAt": 1607000000,
        "uuid": "offer1-uuid",
      },
      "type": "SHARE/library/offers/addOneOfferAction",
    },
    "channel": undefined,
  },
  "type": "PUT",
}
`;
